feat: make utilities to standerdise project code
- create an async handler that returns a middleware
- create a standard Api error and respose class for API

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 PORT=APP_PORT
-DB_URI=postgresql://<USERNAME>@<PASSWORD>:<HOST>:<DB_PORT>/<DB_NAME>
+DB_URI=postgresql://<USERNAME>:<PASSWORD>@<HOST>:<DB_PORT>/<DB_NAME>
 DB_USERNAME=USERNAME
 DB_PASSWORD=PASSWORD
 DB_HOST=HOST
