--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,8 @@ DB_HOST=HOST
 DB_PORT=DB_PORT
 DB_NAME=DB_NAME
 ASSETS_PATH=PATH_TO_ASSETS_FOLDER_ON_SERVER
+
+# cloudinary
+CLOUDINARY_CLOUD_NAME=CLOUDINARY_CLOUD_NAME
+CLOUDINARY_API_KEY=CLOUDINARY_API_KEY
+CLOUDINARY_API_SECRET=CLOUDINARY_API_SECRET
