--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
 		"eslint": "^9.32.0",
 		"eslint-config-prettier": "^10.1.8",
 		"globals": "^16.3.0",
-		"prettier": "3.6.2"
+		"prettier": "3.6.2",
+		"prisma": "^6.16.2"
 	},
 	"dependencies": {
+		"@prisma/client": "^6.16.2",
+		"cloudinary": "^2.7.0",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.2",
