--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.16.2",
+		"bcrypt": "^6.0.0",
 		"cloudinary": "^2.7.0",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
@@ -44,6 +45,7 @@
 		"ejs": "^3.1.10",
 		"express": "^5.1.0",
 		"express-validator": "^7.2.1",
+		"multer": "^2.0.2",
 		"pg": "^8.16.3"
 	}
 }
