--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,9 @@ ASSETS_PATH=PATH_TO_ASSETS_FOLDER_ON_SERVER
 CLOUDINARY_CLOUD_NAME=CLOUDINARY_CLOUD_NAME
 CLOUDINARY_API_KEY=CLOUDINARY_API_KEY
 CLOUDINARY_API_SECRET=CLOUDINARY_API_SECRET
+
+# JWT
+ACCESS_TOKEN_SECRET=your_access_token_secret
+REFRESH_TOKEN_SECRET=your_refresh_token_secret
+ACCESS_TOKEN_EXPIRATION=your_access_token_expiration_time
+REFRESH_TOKEN_EXPIRATION=your_refresh_token_expiration_time
